--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -3,22 +3,17 @@ name: build-windows-exe
 on:
   push:
     branches: [ "main" ]
+    tags: [ "v*" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
-  release:
-    types: [published]
-  push:
-    tags:
-      - 'v*'
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       - name: Install deps
@@ -38,20 +33,18 @@ jobs:
   release:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: windows-latest
-    needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install deps and build
+      - name: Build for release
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
           pyinstaller --noconfirm --onefile --windowed --name MultiPingGrapher src\multi_ping_grapher.py
-      - name: Create Release and Upload EXE
+      - name: Upload to Release
         uses: softprops/action-gh-release@v2
         with:
           files: dist\MultiPingGrapher.exe
